<resources>
    <string name="app_name">Orçamentour</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_travels">TravelsActivity</string>
    <string name="title_activity_travel">TravelActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_new_travel">NewTravelActivity</string>
    <string name="title_activity_new_expense">newExpenseActivity</string>

    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="password_confirmation">Confirme sua senha</string>
    <string name="current_password">Senha atual</string>
    <string name="new_password">Nova senha</string>
    <string name="login_error">E-mail ou senha inválidos</string>
    <string name="enter">Entrar</string>
    <string name="register">Cadastre-se</string>

    <string name="name">Nome</string>
    <string name="send">Enviar</string>
    <string name="cancel">Cancelar</string>
    <string name="password_error">Senhas não conferem</string>

    <string name="profile">Perfil</string>

    <string name="choose_picture">Escolher imagem</string>
    <string name="travel_name">Nome da viagem</string>
    <string name="budget">Orçamento</string>
    <string name="beginning">Início</string>
    <string name="end">Fim</string>

    <string name="create">Criar</string>
    <string name="update">Atualizar</string>
    <string name="add_travel">Adicionar viagem</string>

    <string name="description">Descrição</string>
    <string name="expenses">Despesas</string>
    <string name="value_spent">Valor gasto</string>

    <string name="value">Valor</string>
    <string name="add_expense">Adicionar despesa</string>

    <string name="title_activity_graph">GraphActivity</string>
    <string name="go_to_graph">Gráfico</string>

    <string name="empty_field_error">Preencha todos os campos</string>

    <string name="logout">Logout</string>

    <string name="remove_travel_warning">Tem certeza que deseja apagar essa viagem?</string>
    <string name="remove_expense_warning">Tem certeza que deseja apagar essa despesa?</string>

    <string name="yes">Sim</string>
    <string name="no">Não</string>

    <string name="currency">Moeda</string>
    <string name="default_currency">Moeda padrão</string>
    <string name="exchange_rate">Cotação</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_travels_graph">TravelsGraphActivity</string>
    <string name="title_activity_categories">CategoriesActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_edit_travel">EditTravelActivity</string>
    <string name="title_activity_edit_expense">EditExpenseActivity</string>

</resources>
