<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.traveltrack.vitor.orcamentour.LoginActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:isScrollContainer="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="20dp"
            android:orientation="vertical">

            <ImageView android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:src="@drawable/logo" />

            <LinearLayout android:id="@+id/focus_holder" android:orientation="vertical"
                android:focusable="true" android:focusableInTouchMode="true"
                android:layout_width="0px" android:layout_height="0px"/>

            <EditText android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColorHint="@color/gray"
                android:textColor="@color/dark_blue"
                android:background="@drawable/light_green_border"
                android:paddingBottom="@dimen/input_text_vertical_padding"
                android:paddingTop="@dimen/input_text_vertical_padding"
                android:paddingLeft="@dimen/input_text_horizontal_padding"
                android:paddingRight="@dimen/input_text_horizontal_padding"
                android:layout_marginTop="10dp"
                android:inputType="textEmailAddress"/>

            <EditText android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:textColorHint="@color/gray"
                android:textColor="@color/dark_blue"
                android:background="@drawable/light_green_border"
                android:paddingBottom="@dimen/input_text_vertical_padding"
                android:paddingTop="@dimen/input_text_vertical_padding"
                android:paddingLeft="@dimen/input_text_horizontal_padding"
                android:paddingRight="@dimen/input_text_horizontal_padding"
                android:layout_marginTop="10dp"
                android:inputType="textPassword"/>

            <TextView android:id="@+id/login_error"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_error"
                android:textColor="@color/error"
                android:layout_marginTop="10dp"
                android:visibility="gone"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/light_green_background"
                android:textColor="@color/dark_blue"
                android:stateListAnimator="@null"
                android:layout_marginTop="10dp"
                android:text="@string/enter"
                android:onClick="enter"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/light_green_background"
                android:textColor="@color/dark_blue"
                android:stateListAnimator="@null"
                android:layout_marginTop="10dp"
                android:text="@string/register"
                android:onClick="register"/>

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
