<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    tools:context="com.traveltrack.vitor.travelapp.TravelIndexActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="@dimen/header_height"
        android:layout_above="@+id/footer"
        android:isScrollContainer="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingBottom="20dp"
            android:orientation="vertical">

            <ImageView android:id="@+id/picture"
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:background="@color/gray"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/default_travel_picture"
                android:onClick="addPicture"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/light_green_background"
                android:textColor="@color/dark_blue"
                android:stateListAnimator="@null"
                android:text="@string/choose_picture"
                android:onClick="addPicture"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin">

                <LinearLayout android:id="@+id/focus_holder" android:orientation="vertical"
                    android:focusable="true" android:focusableInTouchMode="true"
                    android:layout_width="0px" android:layout_height="0px"/>

                <EditText android:id="@+id/travel_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/travel_name"
                    android:background="@drawable/light_green_border"
                    android:textColorHint="@color/gray"
                    android:textColor="@color/dark_blue"
                    android:paddingBottom="@dimen/input_text_vertical_padding"
                    android:paddingTop="@dimen/input_text_vertical_padding"
                    android:paddingLeft="@dimen/input_text_horizontal_padding"
                    android:paddingRight="@dimen/input_text_horizontal_padding"
                    android:layout_marginTop="10dp"
                    android:inputType="text"/>

                <EditText android:id="@+id/budget"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/budget"
                    android:background="@drawable/light_green_border"
                    android:textColorHint="@color/gray"
                    android:textColor="@color/dark_blue"
                    android:paddingBottom="@dimen/input_text_vertical_padding"
                    android:paddingTop="@dimen/input_text_vertical_padding"
                    android:paddingLeft="@dimen/input_text_horizontal_padding"
                    android:paddingRight="@dimen/input_text_horizontal_padding"
                    android:layout_marginTop="10dp"
                    android:inputType="numberDecimal"/>

                <TextView android:id="@+id/login_error"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_error"
                    android:textColor="@color/error"
                    android:layout_marginTop="10dp"
                    android:visibility="gone"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/light_green_background"
                        android:onClick="getDate"
                        android:layout_height="fill_parent"
                        android:paddingBottom="7dp"
                        android:paddingTop="7dp"
                        android:paddingLeft="7dp">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_weight="0.3"
                            android:layout_height="fill_parent"
                            android:src="@drawable/calendar_icon"/>

                        <TextView android:id="@+id/beginning"
                            android:layout_width="0dp"
                            android:layout_weight="0.7"
                            android:layout_height="wrap_content"
                            android:textSize="20dp"
                            android:layout_gravity="center"
                            android:paddingLeft="7dp"
                            android:textColor="@color/dark_blue"
                            android:text="@string/beginning" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="0.2"
                        android:layout_height="0dp"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:background="@drawable/light_green_background"
                        android:onClick="getDate"
                        android:layout_height="fill_parent"
                        android:paddingBottom="7dp"
                        android:paddingTop="7dp"
                        android:paddingLeft="7dp">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_weight="0.3"
                            android:layout_height="fill_parent"
                            android:src="@drawable/calendar_icon"/>

                        <TextView android:id="@+id/end"
                            android:layout_width="0dp"
                            android:layout_weight="0.7"
                            android:layout_height="wrap_content"
                            android:textSize="20dp"
                            android:layout_gravity="center"
                            android:paddingLeft="7dp"
                            android:textColor="@color/dark_blue"
                            android:text="@string/end" />

                    </LinearLayout>


                </LinearLayout>

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/light_green_background"
                    android:textColor="@color/dark_blue"
                    android:stateListAnimator="@null"
                    android:layout_marginTop="15dp"
                    android:text="@string/create"
                    android:onClick="create"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <fragment android:id="@+id/header"
        android:name="com.traveltrack.vitor.travelapp.HeaderFragment"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:layout="@layout/fragment_header" />

    <LinearLayout android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/footer_height"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:src="@drawable/back_icon"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:scaleType="centerInside"
            android:background="@color/dark_blue"
            android:onClick="goBack"/>

        <RelativeLayout
            android:layout_width="2dp"
            android:layout_height="fill_parent"
            android:background="@color/white"/>

        <ImageButton android:id="@+id/view_graph"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:src="@drawable/bar_graph_icon"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:scaleType="centerInside"
            android:background="@color/dark_blue"
            android:onClick="viewGraph"/>

        <RelativeLayout
            android:layout_width="2dp"
            android:layout_height="fill_parent"
            android:background="@color/white"/>

        <ImageButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:src="@drawable/add_travel"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:scaleType="centerInside"
            android:background="@color/light_green"/>

    </LinearLayout>

</RelativeLayout>
